Require static import of most `java.util.Collections` methods (#23)
While there, statically import `ZoneOffset.UTC` in a few places.